gpu: Make SwapBuffer fail fatal.

CHECK on SwapBuffer failes in the gles2 command decoder instead
of marking the context as lost and trying to recover.

Bug: 720114
Change-Id: I039e72bfc2dfeb16a3902a8ac80556ed75c9fb08